--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sentry (8.13.0-2~dev1~jessie) jessie; urgency=low
+
+  * … todo
+
+ -- Juergen Hermann <jh@web.de>  Thu, 23 Feb 2017 17:20:27 +0100
+
 sentry (8.13.0-1~jessie) jessie; urgency=low
 
   * Initial release of "debianized-sentry"
