--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,17 @@
+sentry.io (8.22.0-1~jessie) jessie; urgency=medium
+
+  * Renaming package: Using "sentry.io" because of Apache/Sentry
+  * Upstream release 8.22.0
+  * https://github.com/getsentry/sentry/releases/tag/8.22.0
+  * https://docs.sentry.io/server/changelog/#version-8-22
+
+ -- Juergen Hermann <jh@web.de>  Mon, 18 Dec 2017 14:15:56 +0100
+
 sentry (8.18.0-1~jessie) jessie; urgency=medium
 
   * Upstream release 8.18.0
   * https://github.com/getsentry/sentry/releases/tag/8.18.0
+  * https://docs.sentry.io/server/changelog/#version-8-18
 
  -- Juergen Hermann <jh@web.de>  Mon, 10 Jul 2017 12:24:13 +0200
 
