--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sentry.io (9.0.0-1~~rc1-stretch) stretch; urgency=low
+
+  * RC1: https://github.com/getsentry/sentry/releases/tag/9.0.0rc1
+
+ -- Juergen Hermann <jh@web.de>  Tue, 19 Jun 2018 12:38:37 +0200
+
 sentry.io (8.22.0-2~jessie) jessie; urgency=medium
 
   * Fix: Keep old locations of crontab and default files
