--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+sentry.io (9.0.0-1~jessie) jessie; urgency=medium
+
+  * New upstream release
+  * https://github.com/getsentry/sentry/releases/tag/9.0.0
+
+ -- Juergen Hermann <jh@web.de>  Tue, 26 Jun 2018 11:18:09 +0200
+
 sentry.io (9.0.0-1~~rc1-jessie) jessie; urgency=low
 
   * RC1: https://github.com/getsentry/sentry/releases/tag/9.0.0rc1
