--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sentry.io (9.0.0-2~stretch) xenial; urgency=medium
+
+  * postinst: Accept 'triggered' event
+
+ -- Juergen Hermann <jh@web.de>  Wed, 14 Nov 2018 11:30:44 +0100
+
 sentry.io (9.0.0-1~jessie) jessie; urgency=medium
 
   * New upstream release
