New upstream release 9.1.2

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sentry.io (9.1.2-1~stretch) stretch; urgency=medium
+
+  * New upstream release
+
+ -- Juergen Hermann <jh@web.de>  Tue, 23 Jul 2019 10:25:33 +0200
+
 sentry.io (9.1.1-1~stretch) stretch; urgency=medium
 
   * New upstream release
